--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>Meu Portifólio</title>
 </head>
 <body>
-    
+    <img src="Img/meuavatar.png.zip" alt="avatar do Erick" srcset="">
+    <p> Eu sou o Erick</p>
+    <h1> Eu jogo basquete</h1>
+    <p>Sou jogador de basquete, sou bom em matemática, eu ja joguei fora da minha cidade, eu tenho 15 anos, faço aniversário dia 31 de dezembro, eu entendo um pouco de carros, um pouco de concerto de celular e tenho uma boa persuasão, pois, sou vendedor.</p>
+    <p> Minhas habilidades</p>
+    <div>
+        <p>Mecânico</p>
+            <p>Vendas</p>
+            <p>Basquete</p>
+            <p>Persuasão</p>
+    </div>
 </body>
 </html>
