--- a/index.html
+++ b/index.html
@@ -4,23 +4,68 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Meu Portifólio</title>
 </head>
 <body>
-    <img src="Img/images.jpeg" alt="Avatar de Erick" class="rounded-circle" width="150" heitght="150" srcset="">
-    <class="container text-center>
-        <p class="text-center">Apresentação sobre o Erick (Eu)</p>
+    <header class="container text-center">
+        <img src="img/images.jpeg" alt="avatar da Erick" class="rounded-circle" width="150" height="150" srcset="">
+        <p class="lead">Apresentação sobre o Erick (Eu)</p>
     <p> Eu sou o Erick</p>
     <h1> Eu jogo basquete</h1>
     <p>Sou jogador de basquete, sou bom em matemática, eu ja joguei fora da minha cidade, eu tenho 15 anos, faço aniversário dia 31 de dezembro, eu entendo um pouco de carros, um pouco de concerto de celular e tenho uma boa persuasão, pois, sou vendedor.</p>
     <p> Minhas habilidades</p>
     <div>
-        <p>Mecânico</p>
-            <p>Vendas</p>
-            <p>Basquete</p>
-            <p>Persuasão</p>
+        <p class="badge bg-secondary">HTML</p>
+        <p class="badge bg-secondary">CSS</p>
+        <p class="badge bg-secondary">JavaScript</p>
+        <p class="badge bg-secondary">Scratch</p>
     </div>
-    </header>
+</header>
+<main class="container mt-5">
+    <h2>Meus projetos</h2>
+    <div class="row">
+        <!-- Projeto 1 -->
+        <div class="col-md-4">
+            <div class="card">
+                <img src="img/download.jpeg" class="card-img-top" alt="Imagem do gow 1">
+                <div class="card-body">
+                    <h5 class="card-title">Gow 1</h5>
+                    <p class="card-text">Este é um projeto web que conta a história do God of War 1, quais são as armas modos e estilos de jogo.
+                    </p>
+                    <button type="button" class="btn btn-link">Veja o projeto</button>
+                </div>
+            </div>
+        </div>
+        <!-- Projeto 2 -->
+        <div class="col-md-4">
+            <div class="card">
+                <img src="img/download (1).jpeg" class="card-img-top" alt="Imagem do Gow 2">
+                <div classjpeg="card-body">
+                    <h5 class="card-title">Gow 2</h5>
+                    <p class="card-text">Este é o projeto que falará sobre o god of war 2 uma continuação do primeiro jogo de forma aprimorada.</p>
+                    <button type="button" class="btn btn-link">Veja o projeto</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- Projeto 3 -->
+        <div class="col-md-4">
+            <div class="card">
+                <img src="img/download (2).jpeg" class="card-img-top" alt="Imagem do Gow 3">
+                <div class="card-body">
+                    <h5 class="card-title">Gow 3
+                    </h5>
+                    <p class="card-text">Este é um projeto em que falamos do gow 3 um jogo em que a saga grega se encerra.
+                    </p>
+                    <button type="button" class="btn btn-link">Veja o projeto</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</main>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
