--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <p>Sou jogador de basquete, sou bom em matemática, eu ja joguei fora da minha cidade, eu tenho 15 anos, faço aniversário dia 31 de dezembro, eu entendo um pouco de carros, um pouco de concerto de celular e tenho uma boa persuasão, pois, sou vendedor.</p>
     <p> Minhas habilidades</p>
     <div>
-        <p class="badge bg-secondary">HTML</p>
-        <p class="badge bg-secondary">CSS</p>
-        <p class="badge bg-secondary">JavaScript</p>
-        <p class="badge bg-secondary">Scratch</p>
+        <p class="badge bg-secondary">Jogos Hack Slash</p>
+        <p class="badge bg-secondary">Vendas</p>
+        <p class="badge bg-secondary">Persuasão</p>
+        <p class="badge bg-secondary">Basquete</p>
     </div>
 </header>
 <main class="container mt-5">
@@ -66,6 +66,37 @@
     </div>
 
 </main>
+
+  <!-- Modal 1 -->
+  <div class="modal" id="modal1" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Gow 1: Vingança com o Deus da guerra</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p>Kratos um espartano, filho de Zeus com uma humana está em uma guerra que está prestes a perder, até que em ato de desespero ele entrega sua alma ao Deus da guerra para com que ele o ajude a vencer.</p>
+                <p>Ares o Deus da guerra, ao ver o potencial dele, usa o próprio para matar a própria familia, pois, segundo Ares um guerreiro com sentimentos é um guerreiro fraco.</p>
+                <p>Kratos ao matar sua familia é amaldiçoado pela oraculo a viver com as cinzas da sua familia em seu corpo, após isso ele declara Guerra com Ares, pois, ele se sentiu traído.</p>
+                <p>Kratos ainda em busca de vingança, recebe ajuda dos Deuses, pois, eles disseram que Ares estava desgovernado fazendo oque queria e não cumprindo a função de um Deus, e com a ajuda dos deuses Kratos mata o Deus da guerra e se torna o novo Deus da guerra.</p>
+                <img src="img/download.jpeg" alt="Imagem representativa do Gow 1">
+            </div>
+            <div class="modal-footer">
+                <a href="https://pt.wikipedia.org/wiki/God_of_War_(jogo_eletr%C3%B4nico_de_2005)">Ver projeto ao vivo</a>
+                <a href="https://github.com/shallaala/meu-portifolio">Ver código do projeto</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<footer class="container py-5">
+    <h2>Entre em contato</h2>
+    <div>
+        <a href=https://github.com/shallaala?tab=repositories">GitHub</a>
+    </div>
+    <p class="my-5 text-center">© Copyright 2024. Produzido por Erick Felipe</p>
+</footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
