--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,95 +9,167 @@
     <link rel="stylesheet" href="style.css">
     <title>Meu Portifólio</title>
 </head>
+
 <body>
     <header class="container text-center">
         <img src="img/images.jpeg" alt="avatar da Erick" class="rounded-circle" width="150" height="150" srcset="">
         <p class="lead">Apresentação sobre o Erick (Eu)</p>
-    <p> Eu sou o Erick</p>
-    <h1> Eu jogo basquete</h1>
-    <p>Sou jogador de basquete, sou bom em matemática, eu ja joguei fora da minha cidade, eu tenho 15 anos, faço aniversário dia 31 de dezembro, eu entendo um pouco de carros, um pouco de concerto de celular e tenho uma boa persuasão, pois, sou vendedor.</p>
-    <p> Minhas habilidades</p>
-    <div>
-        <p class="badge bg-secondary">Jogos Hack Slash</p>
-        <p class="badge bg-secondary">Vendas</p>
-        <p class="badge bg-secondary">Persuasão</p>
-        <p class="badge bg-secondary">Basquete</p>
+        <p> Eu sou o Erick</p>
+        <h1> Eu jogo basquete</h1>
+        <p>Sou jogador de basquete, sou bom em matemática, eu ja joguei fora da minha cidade, eu tenho 15 anos, faço
+            aniversário dia 31 de dezembro, eu entendo um pouco de carros, um pouco de concerto de celular e tenho uma
+            boa persuasão, pois, sou vendedor.</p>
+        <p> Minhas habilidades</p>
+        <div>
+            <p class="badge bg-secondary">Jogos Hack Slash</p>
+            <p class="badge bg-secondary">Vendas</p>
+            <p class="badge bg-secondary">Persuasão</p>
+            <p class="badge bg-secondary">Basquete</p>
+        </div>
+    </header>
+    <main class="container mt-5">Saga Grega God of war
+        <h2>Meus projetos</h2>
+        <div class="row">
+            <!-- Projeto 1 -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="img/download.jpeg" class="card-img-top" alt="Imagem do gow 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Gow 1</h5>
+                        <p class="card-text">Este é um projeto web que conta a história do God of War 1, quais são as
+                            armas modos e estilos de jogo.
+                        </p>
+                        <button type="button" class="btn btn-link">Veja o projeto</button>
+                    </div>
+                </div>
+            </div>
+            <!-- Projeto 2 -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="img/download (1).jpeg" class="card-img-top" alt="Imagem do Gow 2">
+                    <div classjpeg="card-body">
+                        <h5 class="card-title">Gow 2</h5>
+                        <p class="card-text">Este é o projeto que falará sobre o god of war 2 uma continuação do
+                            primeiro jogo de forma aprimorada.</p>
+                        <button type="button" class="btn btn-link">Veja o projeto</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Projeto 3 -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="img/download (2).jpeg" class="card-img-top" alt="Imagem do Gow 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Gow 3
+                        </h5>
+                        <p class="card-text">Este é um projeto em que falamos do gow 3 um jogo em que a saga grega se
+                            encerra.
+                        </p>
+                        <button type="button" class="btn btn-link">Veja o projeto</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </main>
+    </p>
+    <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Veja
+        o projeto</button>
     </div>
-</header>
-<main class="container mt-5">
-    <h2>Meus projetos</h2>
-    <div class="row">
-        <!-- Projeto 1 -->
-        <div class="col-md-4">
-            <div class="card">
-                <img src="img/download.jpeg" class="card-img-top" alt="Imagem do gow 1">
-                <div class="card-body">
-                    <h5 class="card-title">Gow 1</h5>
-                    <p class="card-text">Este é um projeto web que conta a história do God of War 1, quais são as armas modos e estilos de jogo.
+    </div>
+    </div>
+    </div>
+    </main>
+
+    <!-- Modal 1 -->
+    <div class="modal" id="modal1" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Gow:1</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Kratos um espartano, filho de Zeus com uma humana está em uma guerra que está prestes a perder,
+                        até que em ato de desespero ele entrega sua alma ao Deus da guerra para com que ele o ajude a
+                        vencer.</p>
+                    <p>Ares o Deus da guerra, ao ver o potencial dele, usa o próprio para matar a própria familia, pois,
+                        segundo Ares um guerreiro com sentimentos é um guerreiro fraco.</p>
+                    <p>Kratos ao matar sua familia é amaldiçoado pela oraculo a viver com as cinzas da sua familia em
+                        seu corpo, após isso ele declara Guerra com Ares, pois, ele se sentiu traído.</p>
+                    <p>Kratos ainda em busca de vingança, recebe ajuda dos Deuses, pois, eles disseram que Ares estava
+                        desgovernado fazendo oque queria e não cumprindo a função de um Deus, e com a ajuda dos deuses
+                        Kratos mata o Deus da guerra e se torna o novo Deus da guerra.</p>
+                    <img src="img/download.jpeg" class="img-fluid w-100" alt="Imagem representativa do gow 1">
+                </div>
+                <div class="modal-footer">
+                    <a href="https://femascheti.github.io/minhas-leituras/">Ver projeto ao vivo</a>
+                    <a href="https://github.com/femascheti/minhas-leituras">Ver código do projeto</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal 2 -->
+    <div class="modal" id="modal2" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Gow:2</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Começamos com a luta com um colosso, em que Kratos recebe "ajuda" de Zeus, na realidade, ele foi
+                        traido.
                     </p>
-                    <button type="button" class="btn btn-link">Veja o projeto</button>
-                </div>
-            </div>
-        </div>
-        <!-- Projeto 2 -->
-        <div class="col-md-4">
-            <div class="card">
-                <img src="img/download (1).jpeg" class="card-img-top" alt="Imagem do Gow 2">
-                <div classjpeg="card-body">
-                    <h5 class="card-title">Gow 2</h5>
-                    <p class="card-text">Este é o projeto que falará sobre o god of war 2 uma continuação do primeiro jogo de forma aprimorada.</p>
-                    <button type="button" class="btn btn-link">Veja o projeto</button>
-                </div>
-            </div>
-        </div>
-
-        <!-- Projeto 3 -->
-        <div class="col-md-4">
-            <div class="card">
-                <img src="img/download (2).jpeg" class="card-img-top" alt="Imagem do Gow 3">
-                <div class="card-body">
-                    <h5 class="card-title">Gow 3
-                    </h5>
-                    <p class="card-text">Este é um projeto em que falamos do gow 3 um jogo em que a saga grega se encerra.
+                    <p>Após a traição Kratos foge de inferno em busca da vingança contra Zeus.</p>
+                    <p>Kratos mata as irmãs do destino e volta no tempo no momento em que Zeus o matou para se vingar.
                     </p>
-                    <button type="button" class="btn btn-link">Veja o projeto</button>
+                    <p>Kratos no seu ataque final, Atena entra na frente enquanto Zeus foge Atena morre em seu lugar.
+                    </p>
+                    <img src="img/download (1).jpeg" class="img-fluid w-100" alt="Imagem representativa do gow 2">
+                </div>
+                <div class="modal-footer">
+                    <a href="https://femascheti.github.io/tecnicas-computacionais-refletindo-sobre-ia/">Ver projeto ao
+                        vivo</a>
+                    <a href="https://github.com/femascheti/tecnicas-computacionais-refletindo-sobre-ia">Ver código do
+                        projeto</a>
                 </div>
             </div>
         </div>
     </div>
 
-</main>
-
-  <!-- Modal 1 -->
-  <div class="modal" id="modal1" tabindex="-1">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Gow 1: Vingança com o Deus da guerra</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <p>Kratos um espartano, filho de Zeus com uma humana está em uma guerra que está prestes a perder, até que em ato de desespero ele entrega sua alma ao Deus da guerra para com que ele o ajude a vencer.</p>
-                <p>Ares o Deus da guerra, ao ver o potencial dele, usa o próprio para matar a própria familia, pois, segundo Ares um guerreiro com sentimentos é um guerreiro fraco.</p>
-                <p>Kratos ao matar sua familia é amaldiçoado pela oraculo a viver com as cinzas da sua familia em seu corpo, após isso ele declara Guerra com Ares, pois, ele se sentiu traído.</p>
-                <p>Kratos ainda em busca de vingança, recebe ajuda dos Deuses, pois, eles disseram que Ares estava desgovernado fazendo oque queria e não cumprindo a função de um Deus, e com a ajuda dos deuses Kratos mata o Deus da guerra e se torna o novo Deus da guerra.</p>
-                <img src="img/download.jpeg" alt="Imagem representativa do Gow 1">
-            </div>
-            <div class="modal-footer">
-                <a href="https://pt.wikipedia.org/wiki/God_of_War_(jogo_eletr%C3%B4nico_de_2005)">Ver projeto ao vivo</a>
-                <a href="https://github.com/shallaala/meu-portifolio">Ver código do projeto</a>
+    <!-- Modal 3 -->
+    <div class="modal" id="modal3" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Gow:3</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Kratos após matar Atena revive os titãs e começa a subir o monte olimpo.</p>
+                    <p>Kratos foi traido pelos titãs e jura vingança a eles também.
+                    </p>
+                    <p>Kratos acaba matando todos os titãs e Deuses que interferiram em sua vida.</p>
+                    <img src="img/download (2).jpeg" alt="Gow 3" class="img-fluid w-100">
+                </div>
+                <div class="modal-footer">
+                    <a href="https://github.com/shallaala/meu-portifolio">Ver projeto ao vivo</a>
+                </div>
             </div>
         </div>
     </div>
-</div>
+    <footer class="container py-5">
+        <h2>Entre em contato</h2>
+        <div>
+            <i class="bi bi-github"></i>
+            <a href="https://github.com/shallaala/meu-portifolio">GitHub</a>
+        </div>
+        <p class="my-5 text-center">© Copyright 2024. Produzido por Erick Felipe.</p>
+    </footer>
 
-<footer class="container py-5">
-    <h2>Entre em contato</h2>
-    <div>
-        <a href=https://github.com/shallaala?tab=repositories">GitHub</a>
-    </div>
-    <p class="my-5 text-center">© Copyright 2024. Produzido por Erick Felipe</p>
-</footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
